bindings/c/include/teistro.h


#define TS_CONTEXT_TEST_PROVIDER ((uint32_t)1)
typedef enum ts_status {
    TS_STATUS_OK = 0,
    TS_STATUS_INVALID_ARG = -1,
    TS_STATUS_OUT_OF_RANGE = -2,
    TS_STATUS_CAPABILITY = -3,
    TS_STATUS_PROVIDER = -4,
    TS_STATUS_NOT_CONVERGED = -5,
    TS_STATUS_UNSUPPORTED = -6,
    TS_STATUS_PACK = -7,
    TS_STATUS_LIMIT = -8,
    TS_STATUS_SCHEMA_VERSION = -9,
    TS_STATUS_INTERNAL = -10,
} ts_status;
typedef struct ts_context ts_context;
typedef struct ts_position_request ts_position_request;
typedef struct ts_provider_vtable ts_provider_vtable;
typedef struct ts_string ts_string;
typedef struct ts_str ts_str;
typedef struct ts_hash ts_hash;
typedef struct ts_blob ts_blob;
typedef struct ts_context_options ts_context_options;
typedef struct ts_error ts_error;
typedef struct ts_frame ts_frame;
typedef struct ts_calendar_date ts_calendar_date;
typedef struct ts_civil_date_time ts_civil_date_time;
typedef struct ts_zone_spec ts_zone_spec;
typedef struct ts_zone_resolution ts_zone_resolution;
typedef struct ts_time_conversion ts_time_conversion;
typedef struct ts_delta_t ts_delta_t;
typedef struct ts_intl_loaded ts_intl_loaded;
struct ts_position_request {
    uint32_t struct_size;
    uint32_t scale;
    uint32_t frame_bits;
    uint8_t speeds;
    uint8_t has_observer;
    uint8_t reserved[2];
    ts_observer observer;
    const double * jds;
    size_t jd_count;
    const uint16_t * bodies;
    size_t body_count;
};
struct ts_provider_vtable {
    uint32_t struct_size;
    uint32_t abi_version;
    ts_capabilities_fn capabilities;
    ts_positions_fn positions;
    ts_obliquity_fn obliquity;
    ts_delta_t_fn delta_t;
    ts_ayanamsha_fn ayanamsha;
    ts_dut1_fn dut1;
    ts_horizon_event_fn horizon_event;
    ts_crossings_fn crossings;
    ts_native_manifest_fn native_manifest;
    ts_native_call_fn native_call;
};
struct ts_string {
    uint8_t * data;
    size_t len;
    size_t cap;
};
struct ts_str {
    const char * data;
    size_t len;
};
struct ts_hash {
    uint8_t bytes[32];
};
struct ts_blob {
    uint8_t * data;
    size_t len;
    size_t cap;
};
struct ts_context_options {
    uint32_t struct_size;
    uint32_t flags;
    const char * profile;
    const char * settings_json;
    const char * locale;
    const char * layouts_json;
    uint8_t ephemeris;
};
struct ts_error {
    uint32_t struct_size;
    int32_t status;
    int32_t provider_code;
    uint32_t flags;
    const char * detail;
    const char * message;
    const char * field;
    const char * hint;
    const char * key;
};
struct ts_frame {
    uint32_t struct_size;
    uint16_t ayanamsha;
    uint8_t centre;
    uint8_t equinox;
    uint8_t coordinates;
    uint8_t sidereal;
    uint8_t light_time;
    uint8_t aberration;
    uint8_t deflection;
    uint8_t nutation;
};
struct ts_calendar_date {
    uint32_t struct_size;
    uint16_t calendar;
    uint16_t era;
    int32_t year;
    int32_t era_year;
    uint8_t month;
    uint8_t day;
    uint8_t resolution;
    uint8_t computed_month;
    uint8_t computed_day;
    uint8_t reserved[3];
};
struct ts_civil_date_time {
    uint32_t struct_size;
    uint32_t reserved;
    ts_calendar_date date;
    ts_civil_time time;
};
struct ts_zone_spec {
    uint32_t struct_size;
    uint8_t kind;
    uint8_t reserved[3];
    int32_t offset_seconds;
    uint32_t reserved2;
    double longitude_deg;
    const char * zone;
};
struct ts_zone_resolution {
    uint32_t struct_size;
    int32_t offset_seconds;
    int32_t dst_shift_seconds;
    uint32_t warnings;
    double instant_jd_utc;
    const char * tzdb_version;
    const char * abbreviation;
    uint8_t source;
    uint8_t era;
    uint8_t dst;
    uint8_t chosen;
    uint8_t time_known;
    uint8_t reserved[3];
};
struct ts_time_conversion {
    uint32_t struct_size;
    uint32_t from;
    uint32_t to;
    uint8_t delta_t_source;
    uint8_t proleptic_utc;
    uint8_t has_uncertainty;
    uint8_t reserved;
    double jd;
    double delta_t_seconds;
    double uncertainty_seconds;
    double dut1_seconds;
    const char * delta_t_model;
};
struct ts_delta_t {
    uint32_t struct_size;
    uint8_t source;
    uint8_t has_uncertainty;
    uint8_t reserved[2];
    double seconds;
    double uncertainty_seconds;
    const char * model;
};
struct ts_intl_loaded {
    uint32_t struct_size;
    uint32_t entries;
    uint32_t replaced;
    uint32_t reserved;
    const char * locale;
    const char * sha256;
};
uint32_t ts_abi_version(void);
const char * ts_sdk_version(void);
uint32_t ts_catalogue_version(void);
const char * ts_default_profile(void);
const char * ts_status_message(int32_t status);
void ts_string_free(ts_string * string);
void ts_blob_free(ts_blob * blob);
ts_status ts_context_new(const ts_context_options * options,  const ts_provider_vtable * provider,  void * provider_user_data, ts_context * * out_context, ts_error * out_error);
void ts_context_free(ts_context * context);
ts_status ts_context_last_error(const ts_context * context, ts_error * out_error);
ts_status ts_context_profile(const ts_context * context, ts_str * out_profile);
ts_status ts_context_settings_json(const ts_context * context, ts_string * out_json);
ts_status ts_context_settings_hash(const ts_context * context, ts_hash * out_hash);
ts_status ts_key_parse(const ts_context * context, const char * key, uint32_t * out_id);
ts_status ts_key_name(const ts_context * context, uint32_t id, ts_str * out_key);
ts_status ts_frame_canonical(ts_frame * out_frame);
ts_status ts_frame_pack(const ts_frame * frame, uint32_t * out_bits);
ts_status ts_frame_unpack(uint32_t bits, ts_frame * out_frame);
ts_status ts_calendar_from_fixed(const ts_context * context, uint16_t calendar, int64_t fixed, ts_calendar_date * out_date);
ts_status ts_calendar_to_fixed(const ts_context * context, const ts_calendar_date * date, int64_t * out_fixed);
ts_status ts_calendar_convert(const ts_context * context, const ts_calendar_date * date, uint16_t into, ts_calendar_date * out_date);
ts_status ts_calendar_month_length(const ts_context * context, uint16_t calendar, int32_t year, uint8_t month, uint8_t * out_length);
ts_status ts_calendar_is_leap(const ts_context * context, uint16_t calendar, int32_t year, uint8_t * out_leap);
ts_status ts_calendar_weekday(const ts_context * context, const ts_calendar_date * date, uint8_t * out_weekday);
double ts_calendar_jd_of_fixed(int64_t fixed);
int64_t ts_calendar_fixed_of_jd(double jd, double * out_fraction);
ts_status ts_time_resolve(const ts_context * context, const ts_civil_date_time * civil, const ts_zone_spec * zone, ts_zone_resolution * out_resolution);
ts_status ts_time_civil(const ts_context * context, double jd_utc, const ts_zone_spec * zone, uint16_t calendar, ts_civil_date_time * out_civil, ts_zone_resolution * out_resolution);
ts_status ts_time_convert(const ts_context * context, double jd, uint32_t from, uint32_t to, ts_time_conversion * out_conversion);
ts_status ts_time_delta_t(const ts_context * context, double jd_ut1, ts_delta_t * out_delta_t);
ts_status ts_intl_load_pack(const ts_context * context, const uint8_t * bytes, size_t bytes_len, ts_intl_loaded * out_loaded);
ts_status ts_intl_set_locale(const ts_context * context, const char * locale);
ts_status ts_intl_locale(const ts_context * context, ts_str * out_locale);
ts_status ts_intl_has(const ts_context * context, const char * key, uint8_t * out_has);
ts_status ts_intl_render(const ts_context * context, const char * key, const char * params_json, ts_blob * out_blob);
ts_status ts_positions(const ts_context * context, const ts_position_request * request, ts_blob * out_blob);