bindings/dart/lib/src/ffi.dart


/// The C surface, every entry point looked up once when the library
/// opens rather than on each call.
final class TeistroLibrary {
  /// Looks up every entry point in an open library.
  TeistroLibrary(this.library)
      : ts_abi_version = library.lookupFunction<TsAbiVersionNative, TsAbiVersionDart>('ts_abi_version'),
        ts_sdk_version = library.lookupFunction<TsSdkVersionNative, TsSdkVersionDart>('ts_sdk_version'),
        ts_catalogue_version = library.lookupFunction<TsCatalogueVersionNative, TsCatalogueVersionDart>('ts_catalogue_version'),
        ts_default_profile = library.lookupFunction<TsDefaultProfileNative, TsDefaultProfileDart>('ts_default_profile'),
        ts_status_message = library.lookupFunction<TsStatusMessageNative, TsStatusMessageDart>('ts_status_message'),
        ts_string_free = library.lookupFunction<TsStringFreeNative, TsStringFreeDart>('ts_string_free'),
        ts_blob_free = library.lookupFunction<TsBlobFreeNative, TsBlobFreeDart>('ts_blob_free'),
        ts_context_new = library.lookupFunction<TsContextNewNative, TsContextNewDart>('ts_context_new'),
        ts_context_free = library.lookupFunction<TsContextFreeNative, TsContextFreeDart>('ts_context_free'),
        ts_context_last_error = library.lookupFunction<TsContextLastErrorNative, TsContextLastErrorDart>('ts_context_last_error'),
        ts_context_profile = library.lookupFunction<TsContextProfileNative, TsContextProfileDart>('ts_context_profile'),
        ts_context_settings_json = library.lookupFunction<TsContextSettingsJsonNative, TsContextSettingsJsonDart>('ts_context_settings_json'),
        ts_context_settings_hash = library.lookupFunction<TsContextSettingsHashNative, TsContextSettingsHashDart>('ts_context_settings_hash'),
        ts_key_parse = library.lookupFunction<TsKeyParseNative, TsKeyParseDart>('ts_key_parse'),
        ts_key_name = library.lookupFunction<TsKeyNameNative, TsKeyNameDart>('ts_key_name'),
        ts_frame_canonical = library.lookupFunction<TsFrameCanonicalNative, TsFrameCanonicalDart>('ts_frame_canonical'),
        ts_frame_pack = library.lookupFunction<TsFramePackNative, TsFramePackDart>('ts_frame_pack'),
        ts_frame_unpack = library.lookupFunction<TsFrameUnpackNative, TsFrameUnpackDart>('ts_frame_unpack'),
        ts_calendar_from_fixed = library.lookupFunction<TsCalendarFromFixedNative, TsCalendarFromFixedDart>('ts_calendar_from_fixed'),
        ts_calendar_to_fixed = library.lookupFunction<TsCalendarToFixedNative, TsCalendarToFixedDart>('ts_calendar_to_fixed'),
        ts_calendar_convert = library.lookupFunction<TsCalendarConvertNative, TsCalendarConvertDart>('ts_calendar_convert'),
        ts_calendar_month_length = library.lookupFunction<TsCalendarMonthLengthNative, TsCalendarMonthLengthDart>('ts_calendar_month_length'),
        ts_calendar_is_leap = library.lookupFunction<TsCalendarIsLeapNative, TsCalendarIsLeapDart>('ts_calendar_is_leap'),
        ts_calendar_weekday = library.lookupFunction<TsCalendarWeekdayNative, TsCalendarWeekdayDart>('ts_calendar_weekday'),
        ts_calendar_jd_of_fixed = library.lookupFunction<TsCalendarJdOfFixedNative, TsCalendarJdOfFixedDart>('ts_calendar_jd_of_fixed'),
        ts_calendar_fixed_of_jd = library.lookupFunction<TsCalendarFixedOfJdNative, TsCalendarFixedOfJdDart>('ts_calendar_fixed_of_jd'),
        ts_time_resolve = library.lookupFunction<TsTimeResolveNative, TsTimeResolveDart>('ts_time_resolve'),
        ts_time_civil = library.lookupFunction<TsTimeCivilNative, TsTimeCivilDart>('ts_time_civil'),
        ts_time_convert = library.lookupFunction<TsTimeConvertNative, TsTimeConvertDart>('ts_time_convert'),
        ts_time_delta_t = library.lookupFunction<TsTimeDeltaTNative, TsTimeDeltaTDart>('ts_time_delta_t'),
        ts_intl_load_pack = library.lookupFunction<TsIntlLoadPackNative, TsIntlLoadPackDart>('ts_intl_load_pack'),
        ts_intl_set_locale = library.lookupFunction<TsIntlSetLocaleNative, TsIntlSetLocaleDart>('ts_intl_set_locale'),
        ts_intl_locale = library.lookupFunction<TsIntlLocaleNative, TsIntlLocaleDart>('ts_intl_locale'),
        ts_intl_has = library.lookupFunction<TsIntlHasNative, TsIntlHasDart>('ts_intl_has'),
        ts_intl_render = library.lookupFunction<TsIntlRenderNative, TsIntlRenderDart>('ts_intl_render'),
        ts_positions = library.lookupFunction<TsPositionsNative, TsPositionsDart>('ts_positions');

  /// The open library, for a finaliser that needs its symbols.
  final ffi.DynamicLibrary library;

  /// The ABI version this library implements.
  final TsAbiVersionDart ts_abi_version;

  /// The SDK version as a static NUL-terminated string (`0.0.0`).
  final TsSdkVersionDart ts_sdk_version;

  /// The catalogue schema version every result's provenance stamps.
  final TsCatalogueVersionDart ts_catalogue_version;

  /// The profile a context uses when its options name none, as a static
  /// NUL-terminated string.
  final TsDefaultProfileDart ts_default_profile;

  /// A static NUL-terminated English phrase for a status code; `unknown
  /// status` for a code this build does not know.
  final TsStatusMessageDart ts_status_message;

  /// Frees a string the library allocated and zeroes the descriptor; null
  /// or an empty string is ignored.
  final TsStringFreeDart ts_string_free;

  /// Frees a blob the library allocated and zeroes the descriptor; null or
  /// an empty blob is ignored.
  final TsBlobFreeDart ts_blob_free;

  /// Creates a context. `options` may be null for every default; `provider`
  /// may be null, in which case the `TS_CONTEXT_TEST_PROVIDER` flag selects
  /// the analytic test provider and no flag leaves the context without an
  /// ephemeris (positions are then `CAPABILITY`); `provider_user_data` is
  /// passed back to the vtable's functions untouched and must stay valid
  /// until `ts_context_free`. On success `*out_context` owns the context;
  /// on failure, when `out_error` is not null, it receives the error's
  /// message as a string to free with `ts_string_free`.
  final TsContextNewDart ts_context_new;

  /// Frees a context; null is ignored.
  final TsContextFreeDart ts_context_free;

  /// The outcome of the last call on the context: its status, the provider's
  /// code, and the message, field, hint and key as strings lent until the
  /// next call other than this one. After a successful call the record is
  /// `OK` with a null message.
  final TsContextLastErrorDart ts_context_last_error;

  /// The id of the profile the context's settings came from, lent until the
  /// next call on the context.
  final TsContextProfileDart ts_context_profile;

  /// The resolved settings as their canonical JSON document, allocated for
  /// the caller; free it with `ts_string_free`. Two contexts with the same
  /// document compute the same numbers.
  final TsContextSettingsJsonDart ts_context_settings_json;

  /// The SHA-256 of the canonical settings document: the `settings_hash`
  /// every result's provenance carries.
  final TsContextSettingsHashDart ts_context_settings_hash;

  /// Resolves a full key (`graha.SUN`, an alias, or a former key) to its
  /// packed id. An unknown key is `UNSUPPORTED` with the nearest known key as
  /// the hint in the context's last error.
  final TsKeyParseDart ts_key_parse;

  /// The full key of a packed id (`graha.SUN`), lent until the next call on
  /// the context. An id no catalogued member has is `UNSUPPORTED`.
  final TsKeyNameDart ts_key_name;

  /// Writes the SDK's canonical frame: apparent geocentric ecliptic of date,
  /// tropical, which both licensed engines return by default and every chart
  /// module consumes. Set `struct_size` before the call.
  final TsFrameCanonicalDart ts_frame_canonical;

  /// Packs a frame into the bits a position request carries.
  final TsFramePackDart ts_frame_pack;

  /// Reads packed frame bits back into their fields; bits no frame sets are
  /// `INVALID_ARG`.
  final TsFrameUnpackDart ts_frame_unpack;

  /// The date a fixed day falls on in a calendar.
  final TsCalendarFromFixedDart ts_calendar_from_fixed;

  /// The fixed day of a date, validated: a date the calendar does not have
  /// is `INVALID_ARG` with the `NONEXISTENT_DATE` detail.
  final TsCalendarToFixedDart ts_calendar_to_fixed;

  /// Converts a date into another calendar.
  final TsCalendarConvertDart ts_calendar_convert;

  /// The length of a month in a calendar.
  final TsCalendarMonthLengthDart ts_calendar_month_length;

  /// Whether a year is a leap year in a calendar: `1` or `0`.
  final TsCalendarIsLeapDart ts_calendar_is_leap;

  /// The weekday of a date as its ISO number: Monday is `1`, Sunday `7`.
  final TsCalendarWeekdayDart ts_calendar_weekday;

  /// The Julian day at the UTC midnight that begins a fixed day (fixed day
  /// 1 is Monday, 1 January 1 CE; the relation is `fixed + 1721424.5`).
  final TsCalendarJdOfFixedDart ts_calendar_jd_of_fixed;

  /// The fixed day a Julian day falls in, and, when `out_fraction` is not
  /// null, the fraction of that day elapsed since its midnight.
  final TsCalendarFixedOfJdDart ts_calendar_fixed_of_jd;

  /// Resolves a civil date-time in a zone to a UTC instant under the
  /// context's daylight-saving and unknown-time policies, with the metadata
  /// a stored chart keeps. An unknown zone is `UNSUPPORTED` with the nearest
  /// names as the hint; a civil time inside a gap under the `error` policy
  /// is `INVALID_ARG` with the `DST_GAP` detail.
  final TsTimeResolveDart ts_time_resolve;

  /// The civil date-time of a UTC instant in a zone, in a calendar, with
  /// the resolution that applied.
  final TsTimeCivilDart ts_time_civil;

  /// Converts an instant between UT1, TT and UTC under the context's Delta T
  /// model, reporting what was applied. A model that cannot answer for the
  /// instant is `OUT_OF_RANGE`.
  final TsTimeConvertDart ts_time_convert;

  /// Delta T (TT less UT1) at a UT1 instant under the context's model, with
  /// what produced it and its uncertainty where the source has one.
  final TsTimeDeltaTDart ts_time_delta_t;

  /// Loads a `.tpack` or `.tbundle` file: a locale it brings is added, a
  /// namespace it brings replaces what was loaded under the same keys. A
  /// file that does not verify is `PACK`.
  final TsIntlLoadPackDart ts_intl_load_pack;

  /// Selects the locale every render resolves from; an unknown one is
  /// `UNSUPPORTED` naming the loaded locales.
  final TsIntlSetLocaleDart ts_intl_set_locale;

  /// The locale every render resolves from, lent until the next call on the
  /// context.
  final TsIntlLocaleDart ts_intl_locale;

  /// Whether the current locale or its fallbacks have a message: `1` or `0`.
  final TsIntlHasDart ts_intl_has;

  /// Renders a message with parameters given as a JSON object: a string, an
  /// integer, a number or an array is itself; an entity is
  /// `{"$entity": "graha.SUN"}`; a date `{"$date": {"calendar": "GREGORIAN",
  /// "year": 2026, "month": 9, "day": 6}}`; a time `{"$time": {"hour": 6,
  /// "minute": 15, "second": 0}}`; a date and time `{"$datetime": {"date":
  /// {...}, "time": {...}}}`; a ghati count `{"$ghati": {"ghati": 12,
  /// "pala": 30, "vipala": 0}}`. A null `params_json` renders with none.
  /// The result blob carries the text, where it resolved from and the
  /// warnings; a missing message renders as its key with a warning, never
  /// an error.
  final TsIntlRenderDart ts_intl_render;

  /// Positions over a grid of instants and bodies in the requested frame:
  /// the provider answers in the frame it can, the SDK completes the rest
  /// under the profile's override policy, and every step is stamped. A
  /// context without an ephemeris is `CAPABILITY`; a provider failure is
  /// `PROVIDER` with the provider's own code in the last error.
  final TsPositionsDart ts_positions;

}
